--- a/funciones/funcionesaApi.ipynb
+++ b/funciones/funcionesaApi.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 28,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -19,7 +19,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 29,
    "metadata": {},
    "outputs": [
     {
@@ -189,7 +189,7 @@
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
-       "<p>5 rows × 23 columns</p>\n",
+       "<p>5 rows × 24 columns</p>\n",
        "</div>"
       ],
       "text/plain": [
@@ -249,10 +249,10 @@
        "3           English          US  United States of America  \n",
        "4           English          US  United States of America  \n",
        "\n",
-       "[5 rows x 23 columns]"
+       "[5 rows x 24 columns]"
       ]
      },
-     "execution_count": 20,
+     "execution_count": 29,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -264,7 +264,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 30,
    "metadata": {},
    "outputs": [
     {
@@ -273,7 +273,7 @@
      "text": [
       "<class 'pandas.core.frame.DataFrame'>\n",
       "RangeIndex: 45464 entries, 0 to 45463\n",
-      "Data columns (total 23 columns):\n",
+      "Data columns (total 24 columns):\n",
       " #   Column             Non-Null Count  Dtype  \n",
       "---  ------             --------------  -----  \n",
       " 0   budget             45376 non-null  float64\n",
@@ -288,19 +288,20 @@
       " 9   tagline            20398 non-null  object \n",
       " 10  title              45376 non-null  object \n",
       " 11  vote_average       45376 non-null  float64\n",
-      " 12  return             45376 non-null  float64\n",
-      " 13  id_collection      4488 non-null   float64\n",
-      " 14  name_collection    4488 non-null   object \n",
-      " 15  id_genres          42992 non-null  object \n",
-      " 16  name_genres        42992 non-null  object \n",
-      " 17  id_production      33580 non-null  object \n",
-      " 18  name_production    33580 non-null  object \n",
-      " 19  id_language        41608 non-null  object \n",
-      " 20  name_language      41485 non-null  object \n",
-      " 21  id_countrie        39165 non-null  object \n",
-      " 22  name_countrie      39165 non-null  object \n",
-      "dtypes: float64(8), object(15)\n",
-      "memory usage: 8.0+ MB\n"
+      " 12  release_year       45376 non-null  float64\n",
+      " 13  return             45376 non-null  float64\n",
+      " 14  id_collection      4488 non-null   float64\n",
+      " 15  name_collection    4488 non-null   object \n",
+      " 16  id_genres          42992 non-null  object \n",
+      " 17  name_genres        42992 non-null  object \n",
+      " 18  id_production      33580 non-null  object \n",
+      " 19  name_production    33580 non-null  object \n",
+      " 20  id_language        41608 non-null  object \n",
+      " 21  name_language      41485 non-null  object \n",
+      " 22  id_countrie        39165 non-null  object \n",
+      " 23  name_countrie      39165 non-null  object \n",
+      "dtypes: float64(9), object(15)\n",
+      "memory usage: 8.3+ MB\n"
      ]
     }
    ],
@@ -310,61 +311,61 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "14865                                         The Crazies\n",
-       "14761                                  Four Eyed Monsters\n",
-       "5538                                             The Ring\n",
-       "5159                                       The Cat's Meow\n",
-       "36313                             EK Chotti Si Love Story\n",
-       "6162                                       Fahrenheit 451\n",
-       "7690                                              College\n",
-       "31123                              A Killer Among Friends\n",
-       "32363                                      Happiness Runs\n",
-       "7663                                While the City Sleeps\n",
-       "15887                                               Devil\n",
-       "20667                                 A Bunch of Amateurs\n",
-       "42213                                   Dibu: La Película\n",
-       "16186                          Last of the Red Hot Lovers\n",
-       "37165                                Oysters at Nam Kee's\n",
-       "19150                                            The Firm\n",
-       "8817                        Merry Christmas, Mr. Lawrence\n",
-       "27681                    A Spell to Ward Off the Darkness\n",
-       "37039                             Kisna: The Warrior Poet\n",
-       "8713                                               Butley\n",
-       "41413                                   Belle du Seigneur\n",
-       "12747                                        Sleepwalking\n",
-       "25812                                           City Cops\n",
-       "30453                      Bonnie and Clyde Italian Style\n",
-       "23405                                     12 O’Clock Boys\n",
-       "36255                                   Lapland Odyssey 2\n",
-       "32758                                       Broken Horses\n",
-       "2033                                      Sixteen Candles\n",
-       "19528                                        A Safe Place\n",
-       "2554                                         Notting Hill\n",
-       "31552    Genitori & figli:) - Agitare bene prima dell'uso\n",
-       "16850                                               Alibi\n",
-       "2360                                           52 Pick-Up\n",
-       "24494                                           Small Fry\n",
-       "22827                                 Your Friend the Rat\n",
-       "5429                                   Johnny Dangerously\n",
-       "14649                       Flavor of Green Tea Over Rice\n",
-       "13778                                       Fade to Black\n",
-       "24790                                       Dead Men Tell\n",
-       "43354                                 Katt Williams: Live\n",
-       "9016                                    The Baby of Mâcon\n",
-       "15358                                    The Scalphunters\n",
-       "34296                                  Natale in crociera\n",
-       "24249                                      Dracula Untold\n",
-       "27817                                           6 Desires\n",
+       "32859                 In the Darkness of the Night\n",
+       "18911         The Scorpion King: Rise of a Warrior\n",
+       "14546                                         Nine\n",
+       "45313                                  The Miracle\n",
+       "7890                               Fahrenheit 9/11\n",
+       "700                                       Dead Man\n",
+       "45247                       The Devil in a Convent\n",
+       "33420                      The Most Beautiful Wife\n",
+       "21247                                        Joker\n",
+       "38790                                    The Beast\n",
+       "29192                      Bill Bailey: Part Troll\n",
+       "13210                         The More the Merrier\n",
+       "22190                         My Amityville Horror\n",
+       "40758                        Sense and Sensibility\n",
+       "26976                   The Secret of Convict Lake\n",
+       "5698                            My Mother's Castle\n",
+       "748                         Someone Else's America\n",
+       "4015                                         Fever\n",
+       "21229                           Apple in the River\n",
+       "37987                      The Cheerleader Murders\n",
+       "25379                                The Scapegoat\n",
+       "39185                                        Roots\n",
+       "22350                                   Wild Women\n",
+       "37389                                         Wind\n",
+       "39693                                    Dark Haul\n",
+       "23322                              Moms' Night Out\n",
+       "15811                  Blue Gold: World Water Wars\n",
+       "3008                                   Holy Smoke!\n",
+       "11127                                  Shadowboxer\n",
+       "36541                             Capture the Flag\n",
+       "28887                                   Musikanten\n",
+       "29453                              House of Clocks\n",
+       "45148      Jean Ziegler, l'optimisme de la volonté\n",
+       "27873                        When the Bough Breaks\n",
+       "31856                             Art of the Devil\n",
+       "32949                  Seven Dead in the Cat's Eye\n",
+       "27517             Rehearsals for Extinct Anatomies\n",
+       "29863                                     The Dorm\n",
+       "38490       The Secret Diaries of Miss Anne Lister\n",
+       "8122                           Night of the Demons\n",
+       "19086    Seeking a Friend for the End of the World\n",
+       "39785                                      Bazodee\n",
+       "12023                                 The Wool Cap\n",
+       "34439                                       Tobruk\n",
+       "42495                                        Image\n",
        "Name: title, dtype: object"
       ]
      },
-     "execution_count": 10,
+     "execution_count": 5,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -375,7 +376,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -384,7 +385,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [
     {
@@ -464,39 +465,41 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 29,
+   "execution_count": 15,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "{'dia': 1, 'cantidad': 5838}\n"
+      "{'dia': 'Martes', 'cantidad': 4641}\n"
      ]
     }
    ],
    "source": [
     "def peliculas_dia(dia):\n",
     "    df['release_date'] = pd.to_datetime(df['release_date'])\n",
-    "    peliculas_dia = df[df['release_date'].dt.day == dia]\n",
+    "    dias = {'Lunes': 0, 'Martes': 1, 'Miércoles': 2, 'Jueves': 3, 'Viernes': 4, 'Sábado': 5, 'Domingo': 6}\n",
+    "    nombre_dia = dia.capitalize()\n",
+    "    peliculas_dia = df[df['release_date'].dt.dayofweek == dias[nombre_dia]]\n",
     "    cantidad = len(peliculas_dia)\n",
-    "    respuesta = {'dia': dia, 'cantidad': cantidad}\n",
+    "    respuesta = {'dia': nombre_dia, 'cantidad': int(cantidad)}\n",
     "    return respuesta\n",
     "\n",
-    "resultado = peliculas_dia(1)\n",
+    "resultado = peliculas_dia(\"martes\")\n",
     "print(resultado)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 30,
+   "execution_count": 18,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "{'franquicia': 'Toy Story Collection', 'cantidad': 3, 'ganancia_total': 12.4518011, 'ganancia_promedio': 4.150600366666667}\n"
+      "{'franquicia': 'Toy Story Collection', 'cantidad': 3, 'ganancia_total': 373996033.0, 'ganancia_promedio': 124665344.33333333}\n"
      ]
     }
    ],
@@ -504,8 +507,8 @@
     "def franquicia(franquicia):\n",
     "    peliculas_franquicia = df[df['name_collection'] == franquicia]\n",
     "    cantidad = len(peliculas_franquicia)\n",
-    "    ganancia_total = peliculas_franquicia['return'].sum()\n",
-    "    ganancia_promedio = peliculas_franquicia['return'].mean()\n",
+    "    ganancia_total = peliculas_franquicia['revenue'].sum()\n",
+    "    ganancia_promedio = peliculas_franquicia['revenue'].mean()\n",
     "    respuesta = {'franquicia': franquicia, 'cantidad': cantidad, 'ganancia_total': ganancia_total, 'ganancia_promedio': ganancia_promedio}\n",
     "    return respuesta\n",
     "\n",
@@ -515,7 +518,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 31,
+   "execution_count": 19,
    "metadata": {},
    "outputs": [
     {
@@ -539,14 +542,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 32,
+   "execution_count": 22,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "{'productora': 'Pixar Animation Studios', 'ganancia_total': 75.39816266666666, 'cantidad': 28}\n"
+      "{'productora': 'Pixar Animation Studios', 'ganancia_total': 510034854, 'cantidad': 28}\n"
      ]
     }
    ],
@@ -554,9 +557,9 @@
     "def productoras(productora):\n",
     "    # Filtrar el DataFrame por el nombre de la productora\n",
     "    df_productora = df[df['name_production'] == productora]\n",
-    "    ganancia_total = df_productora['return'].sum()\n",
+    "    ganancia_total = df_productora['revenue'].sum()\n",
     "    cantidad = df_productora['id'].count()\n",
-    "    respuesta = {'productora': productora, 'ganancia_total': ganancia_total, 'cantidad': cantidad}\n",
+    "    respuesta = {'productora': productora, 'ganancia_total': int(ganancia_total), 'cantidad': int(cantidad)}\n",
     "    \n",
     "    return respuesta\n",
     "\n",
@@ -566,14 +569,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 30,
+   "execution_count": 32,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "{'pelicula': 'Toy Story', 'inversion': 30000000.0, 'ganancia': 373554033.0, 'retorno': 11.4518011, 'anio': 1995}\n"
+      "{'pelicula': 'Toy Story', 'inversion': 30000000.0, 'ganancia': 373554033.0, 'retorno': 12.4518011, 'anio': 1995}\n"
      ]
     }
    ],
@@ -582,9 +585,9 @@
     "    pelicula = df[df['title'] == titulo]\n",
     "    inversion = pelicula['budget'].iloc[0]\n",
     "    ganancia = pelicula['revenue'].iloc[0]\n",
-    "    retorno = (ganancia - inversion) / inversion if inversion != 0 else 0\n",
-    "    anio = int(pelicula['release_date'].iloc[0].strftime(\"%Y\"))\n",
-    "    respuesta = {'pelicula': titulo, 'inversion': inversion, 'ganancia': ganancia, 'retorno': retorno, 'anio': anio}\n",
+    "    retorno = pelicula['return'].iloc[0]\n",
+    "    anio = pelicula['release_year'].iloc[0]\n",
+    "    respuesta = {'pelicula': titulo, 'inversion': inversion, 'ganancia': ganancia, 'retorno': retorno, 'anio': int(anio)}\n",
     "    return respuesta\n",
     "\n",
     "resultado = retorno(\"Toy Story\")\n",
