--- a/ML/recomendacion_ml.ipynb
+++ b/ML/recomendacion_ml.ipynb
@@ -11,7 +11,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -31,12 +31,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [],
    "source": [
     "# cargar los datos\n",
-    "df = pd.read_csv(\"dfListo.csv\")\n",
+    "df = pd.read_csv('dfListo.csv')\n",
     "\n",
     "# limitar el conjunto de datos de entrenamiento\n",
     "muestra = df.sample(n=1000, random_state=42)"
@@ -53,7 +53,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -78,7 +78,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -97,7 +97,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -116,7 +116,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 19,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -124,7 +124,7 @@
     "indices = pd.Series(muestra.index, index=muestra['title'])\n",
     "\n",
     "# definir una función para buscar películas similares\n",
-    "def get_similar_movies(title, cosine_sim=cosine_sim, muestra=muestra, indices=indices):\n",
+    "def recomendacion(title, cosine_sim=cosine_sim, muestra=muestra, indices=indices):\n",
     "    # encontrar el índice de la película de entrada\n",
     "    idx = indices[title]\n",
     "\n",
@@ -141,10 +141,10 @@
     "    movie_indices = [i[0] for i in sim_scores]\n",
     "\n",
     "    # obtener los títulos de las películas seleccionadas\n",
-    "    recommended_movies = list(muestra.iloc[movie_indices]['title'])\n",
+    "    peliculas_recomendadas = list(muestra.iloc[movie_indices]['title'])\n",
     "\n",
     "    # devolver los títulos de las películas recomendadas\n",
-    "    return {'recommended_movies': recommended_movies}"
+    "    return {'peliculas_recomendadas': peliculas_recomendadas}"
    ]
   },
   {
@@ -158,26 +158,26 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 20,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "{'recommended_movies': ['Hated:  GG Allin & the Murder Junkies',\n",
+       "{'peliculas_recomendadas': ['Hated:  GG Allin & the Murder Junkies',\n",
        "  'This Land Is Mine',\n",
        "  'The Last Truck: Closing of a GM Plant',\n",
        "  'Culloden',\n",
        "  'Richard III']}"
       ]
      },
-     "execution_count": 7,
+     "execution_count": 20,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "get_similar_movies('Statues Also Die')"
+    "recomendacion('Statues Also Die')"
    ]
   }
  ],
