--- a/ML/ML.ipynb
+++ b/ML/ML.ipynb
@@ -5,27 +5,19 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# Bienvenido al Modelo Machine Learning"
-   ]
-  },
-  {
-   "attachments": {},
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "## Como primera instancia se importan las librerias que se van a utilizar"
+    "## **Importar las librerias**"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 62,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
     "import numpy as pd\n",
-    "import pandas as pd \n",
-    "from sklearn.feature_extraction.text import TfidfVectorizer\n",
-    "from sklearn.metrics.pairwise import linear_kernel"
+    "import pandas as pd\n",
+    "from sklearn.metrics.pairwise import linear_kernel\n",
+    "from sklearn.feature_extraction.text import TfidfVectorizer"
    ]
   },
   {
@@ -33,21 +25,12 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## Luego se abre y se mira el DataFrame ya arreglado para la comodidad del usuario"
+    "## **Se crea un Dataframe con el archivo csv**"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 76,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "df = pd.read_csv('df_arreglado.csv')"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 77,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [
     {
@@ -88,17 +71,17 @@
        "      <th>name_genres</th>\n",
        "      <th>id_production</th>\n",
        "      <th>name_production</th>\n",
-       "      <th>id_countrie</th>\n",
-       "      <th>name_countrie</th>\n",
        "      <th>id_language</th>\n",
        "      <th>name_language</th>\n",
+       "      <th>id_countrie</th>\n",
+       "      <th>name_countrie</th>\n",
        "    </tr>\n",
        "  </thead>\n",
        "  <tbody>\n",
        "    <tr>\n",
        "      <th>0</th>\n",
        "      <td>30000000.0</td>\n",
-       "      <td>862</td>\n",
+       "      <td>862.0</td>\n",
        "      <td>en</td>\n",
        "      <td>Led by Woody, Andy's toys live happily in his ...</td>\n",
        "      <td>21.946943</td>\n",
@@ -114,15 +97,15 @@
        "      <td>Animation,Comedy,Family</td>\n",
        "      <td>3.0</td>\n",
        "      <td>Pixar Animation Studios</td>\n",
-       "      <td>US</td>\n",
-       "      <td>United States of America</td>\n",
        "      <td>en</td>\n",
        "      <td>English</td>\n",
+       "      <td>US</td>\n",
+       "      <td>United States of America</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>1</th>\n",
        "      <td>65000000.0</td>\n",
-       "      <td>8844</td>\n",
+       "      <td>8844.0</td>\n",
        "      <td>en</td>\n",
        "      <td>When siblings Judy and Peter discover an encha...</td>\n",
        "      <td>17.015539</td>\n",
@@ -138,15 +121,15 @@
        "      <td>Adventure,Fantasy,Family</td>\n",
        "      <td>559.0,2550.0,10201.0</td>\n",
        "      <td>TriStar Pictures,Teitler Film,Interscope Commu...</td>\n",
-       "      <td>US</td>\n",
-       "      <td>United States of America</td>\n",
        "      <td>en,fr</td>\n",
        "      <td>English,Français</td>\n",
+       "      <td>US</td>\n",
+       "      <td>United States of America</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>2</th>\n",
        "      <td>0.0</td>\n",
-       "      <td>15602</td>\n",
+       "      <td>15602.0</td>\n",
        "      <td>en</td>\n",
        "      <td>A family wedding reignites the ancient feud be...</td>\n",
        "      <td>11.712900</td>\n",
@@ -162,15 +145,15 @@
        "      <td>Romance,Comedy</td>\n",
        "      <td>6194.0,19464.0</td>\n",
        "      <td>Warner Bros.,Lancaster Gate</td>\n",
-       "      <td>US</td>\n",
-       "      <td>United States of America</td>\n",
        "      <td>en</td>\n",
        "      <td>English</td>\n",
+       "      <td>US</td>\n",
+       "      <td>United States of America</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>3</th>\n",
        "      <td>16000000.0</td>\n",
-       "      <td>31357</td>\n",
+       "      <td>31357.0</td>\n",
        "      <td>en</td>\n",
        "      <td>Cheated on, mistreated and stepped on, the wom...</td>\n",
        "      <td>3.859495</td>\n",
@@ -186,15 +169,15 @@
        "      <td>Comedy,Drama,Romance</td>\n",
        "      <td>306.0</td>\n",
        "      <td>Twentieth Century Fox Film Corporation</td>\n",
-       "      <td>US</td>\n",
-       "      <td>United States of America</td>\n",
        "      <td>en</td>\n",
        "      <td>English</td>\n",
+       "      <td>US</td>\n",
+       "      <td>United States of America</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>4</th>\n",
        "      <td>0.0</td>\n",
-       "      <td>11862</td>\n",
+       "      <td>11862.0</td>\n",
        "      <td>en</td>\n",
        "      <td>Just when George Banks has recovered from his ...</td>\n",
        "      <td>8.387519</td>\n",
@@ -210,10 +193,10 @@
        "      <td>Comedy</td>\n",
        "      <td>5842.0,9195.0</td>\n",
        "      <td>Sandollar Productions,Touchstone Pictures</td>\n",
-       "      <td>US</td>\n",
-       "      <td>United States of America</td>\n",
        "      <td>en</td>\n",
        "      <td>English</td>\n",
+       "      <td>US</td>\n",
+       "      <td>United States of America</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
@@ -221,12 +204,12 @@
        "</div>"
       ],
       "text/plain": [
-       "       budget     id original_language  \\\n",
-       "0  30000000.0    862                en   \n",
-       "1  65000000.0   8844                en   \n",
-       "2         0.0  15602                en   \n",
-       "3  16000000.0  31357                en   \n",
-       "4         0.0  11862                en   \n",
+       "       budget       id original_language  \\\n",
+       "0  30000000.0    862.0                en   \n",
+       "1  65000000.0   8844.0                en   \n",
+       "2         0.0  15602.0                en   \n",
+       "3  16000000.0  31357.0                en   \n",
+       "4         0.0  11862.0                en   \n",
        "\n",
        "                                            overview  popularity release_date  \\\n",
        "0  Led by Woody, Andy's toys live happily in his ...   21.946943   1995-10-30   \n",
@@ -263,29 +246,30 @@
        "3      Comedy,Drama,Romance                 306.0   \n",
        "4                    Comedy         5842.0,9195.0   \n",
        "\n",
-       "                                     name_production id_countrie  \\\n",
-       "0                            Pixar Animation Studios          US   \n",
-       "1  TriStar Pictures,Teitler Film,Interscope Commu...          US   \n",
-       "2                        Warner Bros.,Lancaster Gate          US   \n",
-       "3             Twentieth Century Fox Film Corporation          US   \n",
-       "4          Sandollar Productions,Touchstone Pictures          US   \n",
+       "                                     name_production id_language  \\\n",
+       "0                            Pixar Animation Studios          en   \n",
+       "1  TriStar Pictures,Teitler Film,Interscope Commu...       en,fr   \n",
+       "2                        Warner Bros.,Lancaster Gate          en   \n",
+       "3             Twentieth Century Fox Film Corporation          en   \n",
+       "4          Sandollar Productions,Touchstone Pictures          en   \n",
        "\n",
-       "              name_countrie id_language     name_language  \n",
-       "0  United States of America          en           English  \n",
-       "1  United States of America       en,fr  English,Français  \n",
-       "2  United States of America          en           English  \n",
-       "3  United States of America          en           English  \n",
-       "4  United States of America          en           English  \n",
+       "      name_language id_countrie             name_countrie  \n",
+       "0           English          US  United States of America  \n",
+       "1  English,Français          US  United States of America  \n",
+       "2           English          US  United States of America  \n",
+       "3           English          US  United States of America  \n",
+       "4           English          US  United States of America  \n",
        "\n",
        "[5 rows x 24 columns]"
       ]
      },
-     "execution_count": 77,
+     "execution_count": 2,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
+    "df = pd.read_csv('dfListo.csv')\n",
     "df.head()"
    ]
   },
@@ -294,16 +278,16 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## Algo a tener muy en cuenta es que al DataFrame completo render no lo va a correr ya que pesa muchísimo por lo que se crea la función a fin de limitar el mismo, para que pueda ser utilizado en render arrojando un resultado positivo en la consulta"
+    "## **Se limita el dataframe**"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 78,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
-    "ml=df.sample(n=1000, random_state=42) # limita el ML"
+    "ejemplo=df.sample(n=1000, random_state=42)"
    ]
   },
   {
@@ -311,36 +295,46 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## Luego se crean las siguientes variables a fin de configurar el ML con etiquetas de guía"
+    "## **Desarrollo del modelo**"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 79,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
-    "tfidf= TfidfVectorizer(stop_words = 'english') # esta  funcion hace que no se detenga el codigo por algun tipo de error\n",
-    "ml['overview'] = ml['overview'].fillna('') # este codigo rellena los nullos con espacios vacios\n",
-    "tfidf_matrix = tfidf.fit_transform(ml['overview']) # entrena el modelo overwiew\n",
-    "cosine_sim = linear_kernel(tfidf_matrix, tfidf_matrix) #defino una función que obtendrá recomendaciones basadas en el título de la película ingresado por el usuario\n",
-    "ml.drop_duplicates(inplace=True) # se dropean duplicados\n",
-    "ml = ml.reset_index(drop=True) # se resetean los Indices para evitar inconvenientes\n",
-    "indices = pd.Series(ml.index, index=ml['title']) # esta variable convierte los títulos de las películas en índices para obtener una respuesta rapida\n"
+    "tfidf = TfidfVectorizer(stop_words='english')\n",
+    "\n",
+    "# Rellenar los valores nulos en 'overview' con espacios vacíos\n",
+    "ejemplo['overview'] = ejemplo['overview'].fillna('')\n",
+    "\n",
+    "# Entrenamiento del modelo TfidfVectorizer\n",
+    "tfidf_matrix = tfidf.fit_transform(ejemplo['overview'])\n",
+    "\n",
+    "# Cálculo de similitud del coseno\n",
+    "cosine_sim = linear_kernel(tfidf_matrix, tfidf_matrix)\n",
+    "\n",
+    "# Eliminación de duplicados en ml\n",
+    "ejemplo.drop_duplicates(inplace=True)\n",
+    "ejemplo = ejemplo.reset_index(drop=True)\n",
+    "\n",
+    "# Creación de la serie de índices con los títulos de las películas\n",
+    "indices = pd.Series(ejemplo.index, index=ejemplo['title'])"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 80,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "(1000, 9976)"
+       "(1000, 10120)"
       ]
      },
-     "execution_count": 80,
+     "execution_count": 5,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -359,33 +353,28 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 47,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [],
    "source": [
-    "def recomendaciones(title, cosine_sim = cosine_sim):\n",
+    "def recomendaciones(title, cosine_sim=cosine_sim):\n",
+    "    # Obtener el índice correspondiente al título\n",
     "    idx = indices[title]\n",
+    "    \n",
+    "    # Obtener los puntajes de similitud y enumerarlos\n",
     "    sim_scores = list(enumerate(cosine_sim[idx]))\n",
-    "    sim_scores = sorted(sim_scores, key= lambda x: x[1], reverse=True)\n",
+    "    \n",
+    "    # Ordenar los puntajes de similitud de forma descendente\n",
+    "    sim_scores = sorted(sim_scores, key=lambda x: x[1], reverse=True)\n",
+    "    \n",
+    "    # Obtener los 5 elementos más similares (excluyendo el título actual)\n",
     "    sim_scores = sim_scores[1:6]\n",
+    "    \n",
+    "    # Obtener los índices de las películas recomendadas\n",
     "    movie_indices = [i[0] for i in sim_scores]\n",
-    "    return ml['title'].iloc[movie_indices] # se hizo este y luego"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 81,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "def recomendaciones(title, cosine_sim = cosine_sim):\n",
-    "    idx = indices[title]\n",
-    "    sim_scores = list(enumerate(cosine_sim[idx]))\n",
-    "    sim_scores = sorted(sim_scores, key= lambda x: x[1], reverse=True)\n",
-    "    sim_scores = sim_scores[1:6]\n",
-    "    movie_indices = [i[0] for i in sim_scores]\n",
-    "    recomendaciones=list(ml['title'].iloc[movie_indices]) # se mejoro a este \n",
-    "    return {'lista recomendada': recomendaciones}"
+    "    \n",
+    "    # Devolver los títulos de las películas recomendadas\n",
+    "    return ejemplo['title'].iloc[movie_indices]"
    ]
   },
   {
@@ -393,64 +382,57 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## Y para finalizar luego de realizar la función definida se miran algunos títulos de películas a fin de realizar una consulta de recomendación"
+    "## **Con el fin de probar el modelo tenemos que verificar que titulos podemos usar como input**"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 82,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "0       Among Friends\n",
-       "1       Sorry, Haters\n",
-       "2                Gone\n",
-       "3    The Three Marias\n",
-       "4       The Overnight\n",
+       "0        I Am Belfast\n",
+       "1       Office Killer\n",
+       "2        Lovely Molly\n",
+       "3            Blockade\n",
+       "4    Statues Also Die\n",
        "Name: title, dtype: object"
       ]
      },
-     "execution_count": 82,
+     "execution_count": 7,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "ml['title'].head()"
+    "ejemplo['title'].head()"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 83,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "{'lista recomendada': ['Schneider vs. Bax',\n",
-       "  'Give Us the Moon',\n",
-       "  'Personal Effects',\n",
-       "  \"The Bells of St. Mary's\",\n",
-       "  'Little Sister']}"
+       "274              Spicebush\n",
+       "727              10,000 km\n",
+       "717       American Pastime\n",
+       "340        Miss Rose White\n",
+       "458    No Love for Johnnie\n",
+       "Name: title, dtype: object"
       ]
      },
-     "execution_count": 83,
+     "execution_count": 8,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "recomendaciones('Gone')"
-   ]
-  },
-  {
-   "attachments": {},
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "### Siendo este el resultado espero que haya sido intuitivo y facil de leer"
+    "recomendaciones('Blockade')"
    ]
   }
  ],
@@ -470,7 +452,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.11.3"
+   "version": "3.10.6"
   },
   "orig_nbformat": 4
  },
